Fix all the bugs